Fix: text-align center na descrição footer

--- a/assets/style-global.css
+++ b/assets/style-global.css
@@ -152,6 +152,7 @@ footer{
         font-size: 15px;
         margin-top: 5px;
         margin-bottom: 5px;
+        text-align: center;
     }
 
     .integrantes{
